# dukscala

./: .gitattributes  .gitignore  .hgignore  CMakeLists.txt  README.md  dukscala.cpp  sbt-dbg.bat  sbt.bat
_junk/scad40-test/: CMakeLists.txt  gen.bat  scad40-launch.properties
_junk/scad40-test/cmade/: pal_glfw-3.1.2.cmake
_junk/scad40-test/project/: scad40-sbt.sbt
_junk/scad40-test/scad40-glfw/: main.cpp
example-02-fastparse/: CMakeLists.txt  README.md  build.sbt  dukscala-02.cpp
example-02-fastparse/src/main/scala/com/peterlavalle/dukscala/: Haoyi.scala  package.scala
example-02-fastparse/src/test/scala/com/peterlavalle/dukscala/: HaoyiTest.scala
example-04-coffee-duk/: CMakeLists.txt  palbl.h  palbl_test.cpp  re-scad.bat  readme.md  scad40-launch.properties
example-04-coffee-duk/src/d40/: d40main.cpp  underlay.scad40
example-04-coffee-duk/src/inc/: buzzbird.hpp  liebeck.hpp  palduk.hpp  percolator.hpp
example-04-coffee-duk/src/toy/: toymain.cpp
example-04-coffee-duk/src/var/: Animal.coffee  Animal.js  Beloved.coffee  Buzard.coffee  Calz.js  Cherished.coffee
scad40/: CMakeLists.txt  README.md  ScalaD40.md  build.sbt  build.sbt.orig  question-01.md  sbt.bat
scad40-test/: CMakeLists.txt  build.sbt  scad40-gtest.cpp
scad40-test/d40/: diskio.scad40  glfw.scad40
scad40-test/scad40-glfw/: glfw_queue.hpp  main.cpp  peterlavalle.sandbox.Magpie.cpp  peterlavalle.sandbox.Time.cpp
scad40-test/var/: demo.js
scad40/project/: samon-sbt.sbt  sbt-antlr4.sbt
scad40/sca-util/src/main/scala/com/peterlavalle/sca/: UByte.scala  package.scala
scad40/sca-util/src/test/scala/com/peterlavalle/sca/: WrappedAnyRefTest.scala
scad40/scad40-app/: README.md  scad40-launch.properties
scad40/scad40-app/src/main/scala/com/peterlavalle/sca/: ScaD40App.scala
scad40/scad40-app/src/main/scala/com/peterlavalle/scad40/: ScaD40App.scala
scad40/scad40-app/src/test/scala/com/peterlavalle/sca/: ScaD40AppTest.scala
scad40/scad40-app/src/test/scala/com/peterlavalle/scad40/: ScaD40AppTest.scala
scad40/scad40-lib/src/main/antlr4/peterlavalle/scad40/: Define.g4
scad40/scad40-lib/src/main/samon/com/peterlavalle/: SJS.samon
scad40/scad40-lib/src/main/samon/com/peterlavalle/sca/: D40.samon  SJS.samon
scad40/scad40-lib/src/main/scala/com/peterlavalle/sca/: FromAntlr4.scala  Model.scala
scad40/scad40-lib/src/main/scala/com/peterlavalle/scad40/: ScaD40App.scala  package.scala
scad40/scad40-lib/src/main/scala/peterlavalle/scad40/: FromAntlr4.scala  Model.scala  package.scala
scad40/scad40-lib/src/test/: peterlavalle.diskio.scad40  scala-js.txt
scad40/scad40-lib/src/test/cmake/inc/: peterlavalle.diskio.hpp
scad40/scad40-lib/src/test/cmake/src/: peterlavalle.diskio-gtest.hpp  peterlavalle.diskio.hpp-multiple.cpp
scad40/scad40-lib/src/test/scala/com/peterlavalle/: Home.scala
scad40/scad40-lib/src/test/scala/com/peterlavalle/sca/: EndToEndTest.scala  FromAntlr4Test.scala  TAntlrCompiler.scala
scad40/scad40-lib/src/test/scala/com/peterlavalle/scad40/: ScaD40AppTest.scala
scad40/scad40-lib/src/test/scala/peterlavalle/scad40/: EndToEndTest.scala  FromAntlr4Test.scala  TAntlrCompiler.scala
scad40/scad40.lib/: build.sbt
scad40/scad40.lib/src/test/cmake/src/: peterlavalle.diskio-stupid_mock.hpp
scad40/scad40.lib/src/test/scala/com/peterlavalle/: Home.scala
scad40/scaka-lib/src/main/samon/peterlavalle/scaka/: Frollo.samon
scad40/scaka-lib/src/main/scala/peterlavalle/scaka/: Rollo.scala  ScakaPlugin.scala  package.scala
scad40/scaka-lib/src/test/scala/peterlavalle/: Home.scala
scad40/scaka-lib/src/test/scala/peterlavalle/scaka/: FrolloTest.scala  RolloTest.scala
scad40/scaka-sbt/: example-asssimp.sbt.txt  howto-sbt-plugin.md
scad40/scaka-sbt/example-sol/: build.sbt
scad40/scaka-sbt/examples/art_tool/: build.sbt
scad40/scaka-sbt/examples/art_tool/art/: cottage.blend
scad40/scaka-sbt/src/test/SourceTreeTest.examples/some/: some.c  some.hpp  some.inc
scad40/src/main/antlr4/peterlavalle/scad40/: Define.g4
scad40/src/main/resources/dukd40/peterlavalle/scad40/: Model.Argument.ssp  Model.Global.ssp  Model.KindDeclaration.ssp  Model.KindSInt8.ssp  Model.KindString.ssp  Model.MemberFunction.ssp  Model.MemberRaw.ssp  Model.MemberValue.ssp  Model.MemberVariable.ssp  Model.Module.ssp  Model.Native.ssp  Model.Script.ssp  scad40-duk_obj.ssp  scad40-duk_ref.ssp  scad40-duk_str.ssp  scad40-head.ssp  scad40-object.ssp  scad40-tail.ssp
scad40/src/main/resources/scala-js/peterlavalle/scad40/: Model.Argument.ssp  Model.Global.ssp  Model.KindDeclaration.ssp  Model.MemberFunction.ssp  Model.MemberValue.ssp  Model.MemberVariable.ssp  Model.Module.ssp  Model.Native.ssp  Model.Script.ssp
scad40/src/main/samon/com/peterlavalle/: D40.samon  DukScaCC.samon  DukScaCCPullArgument.samon  DukScaCCPushResult.samon  SJS.samon
scad40/src/main/samon/peterlavalle/: DukScaCC.samon
scad40/src/main/scala/: generated-samon.scala
scad40/src/main/scala/com/peterlavalle/scad40/: ScaD40App.scala  ScaD40Plugin.scala  package.scala
scad40/src/main/scala/peterlavalle/scad40/: FromAntlr4.scala  Main.scala  Model.scala  Nephrite.scala  package.scala
scad40/src/test/: peterlavalle.diskio.hpp  scala-js.txt
scad40/src/test/cmake/: pal_gtest.cmake  peterlavalle.diskio-gtest.cpp  peterlavalle.diskio-gtest.hpp  peterlavalle.diskio-test.cpp  peterlavalle.diskio.cpp
scad40/src/test/cmake/inc/: peterlavalle.diskio.hpp
scad40/src/test/resources/: pal_adler32.hpp  peterlavalle.diskio.hpp  peterlavalle.diskio.scad40  testDukAla.hpp
scad40/src/test/resources/test/peterlavalle/scad40/: Model.MemberVariable.ssp
scad40/src/test/scad40/: peterlavalle.diskio.scad40
scad40/src/test/scala/com/peterlavalle/scad40/: ScaD40AppTest.scala
scad40/src/test/scala/org/scalatest/quickstart/: ExampleSpec.scala
scad40/src/test/scala/peterlavalle/ptll/: Lexical.scala  LexicalTests.scala  package.scala
scad40/src/test/scala/peterlavalle/scad40/: Deboog.scala  DumpExample.scala  EndToEndTest.scala  FeatureTest.scala  FromAntlr4Test.scala  NephriteTest.scala  ScadSamonTest.scala  TAntlrCompiler.scala
(+106 files in other folders)
